WIP: dialog to update user

--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -17,6 +17,7 @@
       <button class="delete" title="delete hero" (click)="delete(user)">
         delete
       </button>
+      <button (click)="modify(user)">Pick one</button>
     </td>
   </ng-container>
 
