--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
     <div>
       <mat-card>
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-          <mat-form-field class="col-md-12">
+          <mat-form-field class="col-md-12 loginForm">
             <mat-label>Username</mat-label>
             <input
               matInput
@@ -13,6 +13,17 @@
               placeholder="username"
               [formControlName]="'username'"
             />
+            <button
+              type="button"
+              mat-button
+              matSuffix
+              mat-icon-button
+              aria-label="Clear"
+              *ngIf="loginForm.get('username').value"
+              (click)="resetInput('username')"
+            >
+              <mat-icon>close</mat-icon>
+            </button>
             <mat-error
               class="formError"
               *ngIf="
@@ -24,7 +35,7 @@
             </mat-error>
           </mat-form-field>
 
-          <mat-form-field class="col-md-12">
+          <mat-form-field class="col-md-12 loginForm">
             <mat-label>Password</mat-label>
             <input
               matInput
@@ -35,10 +46,10 @@
             <button
               type="button"
               mat-button
-              *ngIf="loginForm.controls.password"
               matSuffix
               mat-icon-button
               aria-label="Clear"
+              *ngIf="loginForm.get('password').value"
               (click)="resetInput('password')"
             >
               <mat-icon>close</mat-icon>
