--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -8,3 +8,15 @@
 .loginForm {
   margin-bottom: 1em;
 }
+
+.divider {
+  margin-bottom: 1em;
+}
+
+.redirectionUrl {
+  color: #29ab87;
+}
+
+.icon {
+  margin-right: 1em;
+}
