--- a/src/app/users/components/user-dialog/user-dialog.component.html
+++ b/src/app/users/components/user-dialog/user-dialog.component.html
@@ -3,29 +3,34 @@
 <div mat-dialog-content>
   <mat-form-field class="input-field">
     <mat-label>email</mat-label>
-    <input matInput [(ngModel)]="userToUpdate.email" />
+    <input matInput [(ngModel)]="userToUpdate.email" placeholder="Email" />
   </mat-form-field>
   <mat-form-field class="input-field">
     <mat-label>firstname</mat-label>
-    <textarea
+    <input
       matInput
       placeholder="Firstname"
       [(ngModel)]="userToUpdate.first_name"
-    ></textarea>
+    />
   </mat-form-field>
   <mat-form-field class="input-field">
     <mat-label>lastname</mat-label>
-    <textarea
+    <input
       matInput
       placeholder="Lastname"
       [(ngModel)]="userToUpdate.last_name"
-    ></textarea>
+    />
   </mat-form-field>
 </div>
 
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Close</button>
-  <button mat-button [mat-dialog-close]="userToUpdate" cdkFocusInitial>
+  <button mat-raised-button (click)="onNoClick()">Close</button>
+  <button
+    mat-raised-button
+    [mat-dialog-close]="userToUpdate"
+    color="accent"
+    cdkFocusInitial
+  >
     Update
   </button>
 </div>
