--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -29,3 +29,11 @@
 .display-location {
   margin: 0 20px;
 }
+
+.menuUserAuthentication {
+  margin-left: auto;
+}
+
+.sidenav-row {
+  margin-bottom: 20px;
+}
