--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -29,7 +29,7 @@
     </div>
   </mat-toolbar>
 
-  <mat-drawer #drawer class="mat-sidenav" mode="over">
+  <mat-drawer #drawer class="mat-sidenav" mode="side">
     <mat-selection-list #shoes [multiple]="false">
       <mat-list-option
         *ngFor="let menu of menuList"
