--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,9 +1,6 @@
 .formError {
   color: #8e1600;
 }
-.submitButton {
-  margin-left: 1em;
-}
 
 .loginForm {
   margin-bottom: 1em;
@@ -19,4 +16,8 @@
 
 .icon {
   margin-right: 1em;
+}
+
+.log-btn {
+  margin-right: auto;
 }
