--- a/src/app/register/register-user/register-user.component.scss
+++ b/src/app/register/register-user/register-user.component.scss
@@ -5,3 +5,14 @@
 .registerContainer {
   display: flex;
 }
+
+.registerCard {
+  flex: 1;
+}
+
+a {
+  color: green;
+  &:hover {
+    color: goldenrod;
+  }
+}
