--- a/src/app/register/register-user/register-user.component.html
+++ b/src/app/register/register-user/register-user.component.html
@@ -1,128 +1,132 @@
-<div class="row">
-  <div class="col-md-12">
-    <mat-card>
-      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-        <mat-form-field class="col-md-12 registerForm">
-          <mat-label>Email</mat-label>
-          <input
-            matInput
-            type="email"
-            placeholder="Email"
-            [formControlName]="'email'"
-          />
-          <button
-            type="button"
-            mat-button
-            matSuffix
-            mat-icon-button
-            *ngIf="registerForm.get('email').value"
-            (click)="resetInput('email')"
-          >
-            <mat-icon>close</mat-icon>
-          </button>
-          <mat-error *ngIf="registerForm.get('email').hasError('email')">
-            Please enter a valid email address
-          </mat-error>
-          <mat-error
-            *ngIf="
-              registerForm.get('email').touched &&
-              registerForm.get('email').errors?.required
-            "
-          >
-            Email is <strong>required</strong>
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field class="col-md-12 registerForm">
-          <mat-label>Password</mat-label>
-          <input
-            matInput
-            [type]="hidePassword ? 'password' : 'text'"
-            placeholder="password"
-            [formControlName]="'password'"
-          />
-          <button
-            mat-icon-button
-            matSuffix
-            (click)="hidePassword = !hidePassword"
-          >
-            <mat-icon>{{
-              hidePassword ? "visibility_off" : "visibility"
-            }}</mat-icon>
-          </button>
-          <button
-            type="button"
-            mat-button
-            matSuffix
-            mat-icon-button
-            *ngIf="registerForm.get('password').value"
-            (click)="resetInput('password')"
-          >
-            <mat-icon>close</mat-icon>
-          </button>
-          <mat-error
-            *ngIf="
-              registerForm.get('password').touched &&
-              registerForm.get('password').errors?.required
-            "
-          >
-            Password is <strong>required</strong>
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field class="col-md-12 registerForm">
-          <mat-label>Password confirmation</mat-label>
-          <input
-            matInput
-            [type]="hideConfirmationPassword ? 'password' : 'text'"
-            placeholder="Password Confirmation"
-            [formControlName]="'confirmationPassword'"
-            [errorStateMatcher]="matcher"
-          />
-          <button
-            mat-icon-button
-            matSuffix
-            (click)="hideConfirmationPassword = !hideConfirmationPassword"
-          >
-            <mat-icon>{{
-              hideConfirmationPassword ? "visibility_off" : "visibility"
-            }}</mat-icon>
-          </button>
-          <button
-            type="button"
-            mat-button
-            matSuffix
-            mat-icon-button
-            *ngIf="registerForm.get('confirmationPassword').value"
-            (click)="resetInput('confirmationPassword')"
-          >
-            <mat-icon>close</mat-icon>
-          </button>
-          <mat-error *ngIf="registerForm.hasError('notSame')">
-            Passwords do not match
-          </mat-error>
-          <mat-error
-            *ngIf="
-              registerForm.get('confirmationPassword').touched &&
-              registerForm.get('confirmationPassword').errors?.required
-            "
-          >
-            Password is <strong>required</strong>
-          </mat-error>
-        </mat-form-field>
+<div class="element">
+  <mat-card class="registerCard">
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <mat-form-field class="registerForm">
+        <mat-label>Email</mat-label>
+        <input
+          matInput
+          type="email"
+          placeholder="Email"
+          [formControlName]="'email'"
+        />
+        <button
+          type="button"
+          mat-button
+          matSuffix
+          mat-icon-button
+          *ngIf="registerForm.get('email').value"
+          (click)="resetInput('email')"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
+        <mat-error *ngIf="registerForm.get('email').hasError('email')">
+          Please enter a valid email address
+        </mat-error>
+        <mat-error
+          *ngIf="
+            registerForm.get('email').touched &&
+            registerForm.get('email').errors?.required
+          "
+        >
+          Email is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="registerForm">
+        <mat-label>Password</mat-label>
+        <input
+          matInput
+          [type]="hidePassword ? 'password' : 'text'"
+          placeholder="password"
+          [formControlName]="'password'"
+        />
+        <button
+          mat-icon-button
+          type="button"
+          matSuffix
+          (click)="hidePassword = !hidePassword"
+        >
+          <mat-icon>{{
+            hidePassword ? "visibility_off" : "visibility"
+          }}</mat-icon>
+        </button>
+        <button
+          type="button"
+          mat-button
+          matSuffix
+          mat-icon-button
+          *ngIf="registerForm.get('password').value"
+          (click)="resetInput('password')"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
+        <mat-error
+          *ngIf="
+            registerForm.get('password').touched &&
+            registerForm.get('password').errors?.required
+          "
+        >
+          Password is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="registerForm">
+        <mat-label>Password confirmation</mat-label>
+        <input
+          matInput
+          [type]="hideConfirmationPassword ? 'password' : 'text'"
+          placeholder="Password Confirmation"
+          [formControlName]="'confirmationPassword'"
+          [errorStateMatcher]="matcher"
+        />
+        <button
+          mat-icon-button
+          type="button"
+          matSuffix
+          (click)="hideConfirmationPassword = !hideConfirmationPassword"
+        >
+          <mat-icon>{{
+            hideConfirmationPassword ? "visibility_off" : "visibility"
+          }}</mat-icon>
+        </button>
+        <button
+          type="button"
+          mat-button
+          matSuffix
+          mat-icon-button
+          *ngIf="registerForm.get('confirmationPassword').value"
+          (click)="resetInput('confirmationPassword')"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
+        <mat-error *ngIf="registerForm.hasError('notSame')">
+          Passwords do not match
+        </mat-error>
+        <mat-error
+          *ngIf="
+            registerForm.get('confirmationPassword').touched &&
+            registerForm.get('confirmationPassword').errors?.required
+          "
+        >
+          Password is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
 
-        <div class="registerContainer">
-          <button
-            class="submitButton"
-            type="submit"
-            mat-raised-button
-            color="accent"
-            [disabled]="!registerForm.valid"
-            matTooltipPosition="right"
-            matTooltip="Submit the form to log in the application. Your account will be stored on the browser"
-          >
-            Submit
-          </button>
-        </div>
-      </form>
-    </mat-card>
-  </div>
+      <div class="registerContainer">
+        <button
+          class="submitButton"
+          type="submit"
+          mat-raised-button
+          color="accent"
+          [disabled]="!registerForm.valid"
+          matTooltipPosition="right"
+          matTooltip="Submit the form to log in the application. Your account will be stored on the browser"
+        >
+          Submit
+        </button>
+      </div>
+    </form>
+  </mat-card>
+  <p>
+    Go back to login page at any time by clicking
+    <a [routerLink]="'/login'">here</a>
+  </p>
 </div>
