--- a/src/app/users/components/user-dialog/user-dialog.component.html
+++ b/src/app/users/components/user-dialog/user-dialog.component.html
@@ -1,4 +1,7 @@
 <h1 mat-dialog-title>Updating the account of {{ userToUpdate.email }}</h1>
+<h3 *ngIf="userToUpdate.lastUpdated">
+  last update: {{ userToUpdate.lastUpdated }}
+</h3>
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Profile">
     <div mat-dialog-content class="content">
@@ -23,7 +26,9 @@
         />
       </mat-form-field></div
   ></mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
+  <mat-tab label="Avatar">
+    <img [src]="userToUpdate.avatar" class="userAvatar" />
+  </mat-tab>
 </mat-tab-group>
 
 <div mat-dialog-actions>
