--- a/src/global.scss
+++ b/src/global.scss
@@ -1,2 +1,8 @@
 $color-ligh-grey: #eee;
 $color-menu-activated: #cf5300;
+$color-light-white: #ccc;
+$color-light-black: #212121;
+$color-deep-green: #29ab87;
+$color-dark-red: #8e1600;
+$color-golden-rod: goldenrod;
+$color-indo: indigo;
