--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -1,4 +1,7 @@
 <div class="element">
+  <app-spinner [isProcessing]="isProcessing">
+    <p class="descriptionProcessing">Processing the user list, please wait</p>
+  </app-spinner>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>#</th>
@@ -20,6 +23,7 @@
             mat-icon-button
             color="accent"
             (click)="onDisplayUser(user)"
+            [disabled]="isProcessing"
             matTooltip="View the user"
           >
             <mat-icon>visibility</mat-icon>
@@ -29,6 +33,7 @@
             color="accent"
             (click)="onModify(user)"
             matTooltip="Open dialog to update info"
+            [disabled]="isProcessing"
           >
             <mat-icon>open_in_new</mat-icon>
           </button>
@@ -38,6 +43,7 @@
             color="accent"
             (click)="onDeleteUser(user)"
             matTooltip="Delete"
+            [disabled]="isProcessing"
           >
             <mat-icon>delete</mat-icon>
           </button>
