--- a/src/app/components/shared/components/spinner.component.html
+++ b/src/app/components/shared/components/spinner.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="isProcessing" class="row">
-  <div class="descriptionProcessing"><ng-content></ng-content></div>
-  &nbsp;<mat-spinner [diameter]="25"></mat-spinner>
+  <div class="descriptionProcessing">
+    <ng-content></ng-content>&nbsp;<mat-spinner [diameter]="25"></mat-spinner>
+  </div>
 </div>
