--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,6 @@
-<p>home works!</p>
-<div class="alert alert-success">
-  <strong>Success!</strong> Indicates a successful or positive action.
+<div class="element">
+  <p>home works!</p>
+  <div class="alert alert-success">
+    <strong>Success!</strong> Indicates a successful or positive action.
+  </div>
 </div>
