--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,4 @@
-<p>not-found works!</p>
+<div class="element">
+  <p>Page not Found, error 404.</p>
+  <p>Go back <a [routerLink]="'/home'">home</a></p>
+</div>
