--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
     <div *ngIf="getReturnUrl()">
       <mat-list-item>
         <div>
-          You are redirected from
+          {{ "login.redirected" }}You are redirected from
           <span class="redirectionUrl">{{ returnUrl }}</span>
         </div>
       </mat-list-item>
