--- a/src/global.scss
+++ b/src/global.scss
@@ -6,3 +6,4 @@ $color-deep-green: #29ab87;
 $color-dark-red: #8e1600;
 $color-golden-rod: goldenrod;
 $color-indo: indigo;
+$color-sandy: sandybrown;
