--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -70,4 +70,26 @@
       {{ "home.ve-text" | translate }}
     </dd>
   </dl>
+
+  <dl>
+    <dt>Change Detection</dt>
+    <dd>
+      {{ "home.cd-text" | translate }}the user-list is using the OnPush
+      detection
+    </dd>
+  </dl>
+
+  <dl>
+    <dt>Interceptors</dt>
+    <dd>
+      {{ "home.interceptors-text" | translate }}interceptors are used HTTP
+      errors and HTTP header to send the token
+    </dd>
+  </dl>
+
+  <dl>
+    <dt>Translations</dt>
+    <dd>{{ "home.translations-text" | translate }}</dd>
+    <dd>{{ "home.translations-text2" | translate }}</dd>
+  </dl>
 </div>
