--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,13 +4,19 @@
   <h3>{{ "home.requirements" | translate }}</h3>
   <dl>
     <dt>API</dt>
-    <dd>- {{ "home.using-the" | translate }}'reqres.in'</dd>
+    <dd>- {{ "home.using-the" | translate }} 'reqres.in' API</dd>
     <dt>Auth. system</dt>
     <dd>- {{ "home.auth-system-text" | translate }}</dd>
     <dt>{{ "home.pagination" | translate }}</dt>
     <dd>
       {{ "home.ang-mat-pagination-text" | translate }}
     </dd>
+    <dt>Data Observable Service</dt>
+    <dd>- {{ "home.dos-text" | translate }}</dd>
+    <dt>{{ "home.ds-title" | translate }}</dt>
+    <dd>- {{ "home.ds-text" | translate }}</dd>
+    <dt>{{ "home.deployement-title" | translate }}</dt>
+    <dd>- {{ "home.deployement-text" | translate }}</dd>
   </dl>
 
   <h3>Navigation:</h3>
@@ -69,6 +75,8 @@
     <dd>
       {{ "home.ve-text" | translate }}
     </dd>
+    <dt>Control Value Accessor</dt>
+    <dd>{{ "home.va-text" | translate }}</dd>
   </dl>
 
   <dl>
